After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729727 - gdm-session-worker [pam/gdm-launch-environment] not exiting
gdm-session-worker [pam/gdm-launch-environment] not exiting
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-07 15:44 UTC by Laurent Bigonville
Modified: 2014-05-14 13:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
launch-environment: explicitly kill worker on stop even if session is running (3.28 KB, patch)
2014-05-14 13:32 UTC, Ray Strode [halfline]
committed Details | Review

Description Laurent Bigonville 2014-05-07 15:44:16 UTC
Hello,

After login, "gdm-session-worker [pam/gdm-launch-environment]" is still running on my machine. With previous version (upgrading from 3.8) this process was gone.

The problem is, every time that I logout, a new "gdm-session-worker [pam/gdm-launch-environment]" process is spawn and never killed
Comment 1 Laurent Bigonville 2014-05-08 08:37:25 UTC
This is the session-status information from logind, as you can see it stay stuck in "closing" state


c1 - Debian-gdm (113)
           Since: jeu 2014-05-08 10:24:50 CEST; 11min ago
          Leader: 1949 (gdm-session-wor)
            Seat: seat0; vc7
         Display: :0
         Service: gdm-launch-environment; type x11; class greeter
           State: closing
          CGroup: systemd:/user/113.user/c1.session
                  └─1949 gdm-session-worker [pam/gdm-launch-environment]
Comment 2 Ray Strode [halfline] 2014-05-14 13:32:59 UTC
Created attachment 276534 [details] [review]
launch-environment: explicitly kill worker on stop even if session is running

Right now, if the launch environment is stopped while it's running the
whole process group of the session is killed. The theory is that doing
this will kill both the worker and the dbus-daemon (and anything else).

The problem is, now that gdm-simple-slave is gone, the worker is not part
of the same process group as its children, so killing the process group
of the session leaves the worker alive.

This commit makes sure the worker is always explicitly killed.
Comment 3 Ray Strode [halfline] 2014-05-14 13:34:31 UTC
Attachment 276534 [details] pushed as 98e7f1e - launch-environment: explicitly kill worker on stop even if session is running